[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/main_menu_ui.gd" type="Script" id=1]
[ext_resource path="res://textures/logo.png" type="Texture" id=2]
[ext_resource path="res://fonts/font_48.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_top = 2.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 24, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 68 ), Vector2( 24, 68 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "SlideBack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 68 ), Vector2( 0, 68 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 136 ), Vector2( 24, 136 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "SlideBack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 136 ), Vector2( 0, 136 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Control" type="Control"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 63.0
margin_right = 512.0
margin_bottom = 227.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 0.33
anchor_bottom = 1.0
margin_left = 62.0
margin_top = 268.0
margin_right = -29.92

[node name="New Game" type="Button" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 241.0
margin_bottom = 64.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Options")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.376471, 0.627451, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.52839, 0.789063, 0.332886, 1 )
custom_constants/hseparation = -10
shortcut_in_tooltip = false
text = "New Game"
flat = true
align = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/New Game"]
playback_speed = 4.0
anims/Slide = SubResource( 3 )
anims/SlideBack = SubResource( 4 )

[node name="Options" type="Button" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 68.0
margin_right = 175.0
margin_bottom = 132.0
focus_neighbour_top = NodePath("../New Game")
focus_neighbour_bottom = NodePath("../Quit")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.376471, 0.627451, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.52839, 0.789063, 0.332886, 1 )
custom_constants/hseparation = -10
shortcut_in_tooltip = false
text = "Options"
flat = true
align = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Options"]
playback_speed = 4.0
anims/Slide = SubResource( 5 )
anims/SlideBack = SubResource( 6 )

[node name="Quit" type="Button" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 136.0
margin_right = 99.0
margin_bottom = 200.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../New Game")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.376471, 0.627451, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.52839, 0.789063, 0.332886, 1 )
custom_constants/hseparation = -10
shortcut_in_tooltip = false
text = "Quit"
flat = true
align = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Quit"]
playback_speed = 4.0
anims/Slide = SubResource( 7 )
anims/SlideBack = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
playback_speed = 0.8
anims/fade_out = SubResource( 9 )
[connection signal="focus_entered" from="VBoxContainer/New Game" to="VBoxContainer/New Game/AnimationPlayer" method="play" binds= [ "Slide" ]]
[connection signal="focus_exited" from="VBoxContainer/New Game" to="VBoxContainer/New Game/AnimationPlayer" method="play" binds= [ "SlideBack" ]]
[connection signal="mouse_entered" from="VBoxContainer/New Game" to="VBoxContainer/New Game/AnimationPlayer" method="play" binds= [ "Slide" ]]
[connection signal="mouse_exited" from="VBoxContainer/New Game" to="VBoxContainer/New Game/AnimationPlayer" method="play" binds= [ "SlideBack" ]]
[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_new_game"]
[connection signal="focus_entered" from="VBoxContainer/Options" to="VBoxContainer/Options/AnimationPlayer" method="play" binds= [ "Slide" ]]
[connection signal="focus_exited" from="VBoxContainer/Options" to="VBoxContainer/Options/AnimationPlayer" method="play" binds= [ "SlideBack" ]]
[connection signal="mouse_entered" from="VBoxContainer/Options" to="VBoxContainer/Options/AnimationPlayer" method="play" binds= [ "Slide" ]]
[connection signal="mouse_exited" from="VBoxContainer/Options" to="VBoxContainer/Options/AnimationPlayer" method="play" binds= [ "SlideBack" ]]
[connection signal="focus_entered" from="VBoxContainer/Quit" to="VBoxContainer/Quit/AnimationPlayer" method="play" binds= [ "Slide" ]]
[connection signal="focus_exited" from="VBoxContainer/Quit" to="VBoxContainer/Quit/AnimationPlayer" method="play" binds= [ "SlideBack" ]]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="VBoxContainer/Quit/AnimationPlayer" method="play" binds= [ "Slide" ]]
[connection signal="mouse_exited" from="VBoxContainer/Quit" to="VBoxContainer/Quit/AnimationPlayer" method="play" binds= [ "SlideBack" ]]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_start_game"]
